# leet_code

./: .gitignore
c/inf_cal_phy/1202/: HELOWA  main.c
c/inf_cal_phy/1216/: main.c
c/inf_cal_phy/1223/: main.c
doc/: computer_science.md  english_vocabulary.md  help  mem.md  rakutan.md  tengaku.md
doc/daihon/: ayakasino_ko.md
doc/daihon/yanikasu_cyan/: mem.md
doc/journal/: METAS.md  YEARLOG.md
doc/journal/2022/: YEARLOG.md
doc/journal/9_September/: MONTHLOG.md
lua/: array.lua  random_color.lua
lua/example/: main.lua  test.lua
lua/make_ex/: Makefile  main.lua
lua/tesssss/: test.lua
rust/b8/bvp_one/: .Cargo.toml.icloud  Cargo.toml
rust/b8/bvp_one/src/: .main.rs.icloud  bvp.txt  bvpp.txt  main.rs
rust/b8/bvp_two/: Cargo.toml
rust/b8/euler/: .Cargo.toml.icloud
rust/b8/one_dim/: Cargo.toml  anm.txt  one_dim.txt
rust/b8/runge_kutta/: .Cargo.toml.icloud  Cargo.toml
rust/b8/two_dim/: Cargo.toml
rust/comment_ale_kore/: Cargo.toml
rust/comment_ale_kore/src/: main.rs
rust/elseeee/: .Cargo.lock.icloud
rust/elseeee/src/: main.rs
rust/grrs/: .Cargo.lock.icloud  .Cargo.toml.icloud  Cargo.toml
rust/grrs/src/: .lib.rs.icloud  .main.rs.icloud  lib.rs  main.rs
rust/grrs/tests/: .cli.rs.icloud  cli.rs
rust/kaleido/: .Cargo.toml.icloud  Cargo.toml
rust/kaleido/src/: .main.rs.icloud  main.rs
rust/leet_code/src/: main.rs
rust/nv_colo/: Cargo.toml
rust/nv_colo/src/: main.rs
rust/typo/: .Cargo.lock.icloud  .Cargo.toml.icloud  Cargo.toml
rust/typo/src/: .main.rs.icloud  main.rs
rust/typo/txt/: difficult.txt
src/: lib.rs  main.rs
(+19 files in other folders)
