[package]
name = "grrs"
version = "0.1.0"
edition = "2021"
default-run="grrs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
assert_cmd="2.0"
predicates="2.1"
assert_fs="1.0"
ctrlc="3.2.2"
signal-hook="0.3.14"

[dependencies]
clap={version="3.0", features=["derive"]}
anyhow="1.0"
indicatif="0.16.2"
log="0.4.17"
env_logger="0.9.0"
